# slidesegmenter

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  test.py
development_pipeline/: 01_dataset_preparation.py  02_dataset_annotation.py  03_dataset_selection.py  04_pen_marking_extraction.py  04_supervised_training.py  04_training.py  04_weakly-supervised_training.py  05_inference.py  05_segmentation_evaluation.py  05_supervised_training.py  05_training.py  06_inference.py  06_segmentation_evaluation.py  06_separation_evaluation.py  07_separation_evaluation.py  config.py  requirements.txt
development_pipeline/utils/: dataset_utils.py  evaluation_utils.py  models.py  training_utils.py  visualization_utils.py
src/slidesegmenter/: __init__.py  _model_utils.py  slidesegmenter.py
src/slidesegmenter/model_files/: settings.json
src/slidesegmenter/model_files/2023-08-08/: settings.json
src/slidesegmenter/model_files/2023-08-13/: settings.json
src/slidesegmenter/model_files/2024-01-10/: settings.json
