[metadata]
name = slidesegmenter
version = 0.0.1
author = Ruben T Lucassen
author_email = r.t.lucassen@umcutrecht.nl
description = A Python package for tissue and pen marking segmentation on low-magnification (1.25x) whole slide images.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
url = https://github.com/RTLucassen/slidesegmenter
classifiers = 
    Programming Language :: Python :: 3.9

[options]
package_dir =
    =src
install_requires =
    numpy >= 1.22
    scipy >= 1.8
    scikit-image >= 0.20.0
    huggingface-hub >= 0.26.0
    hf-xet >= 1.1.5
    torch >= 2.0.0

[options.package_data]
* = *.pth, *.json
